<resources>
    <string name="app_name">WishingList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delimage">delImage</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="price_of_item">Price of item</string>
    <string name="description_of_item">Description of Item</string>
    <string name="add_a_wish">Add a Wish</string>
    <string name="wish_name">Wish Name</string>
    <string name="location">Location</string>
    <string name="add_to_list">Add to List</string>
    <string name="kroner">Kroner</string>
    <string name="where_can_you_get_it">Where can you get it?</string>
    <string name="wishimage">wishimage</string>
    <string name="deletebtn">deletebtn</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="wishing_list">Wishing List</string>
    <string name="addbutton">addbutton</string>
    <string name="sharebutton">sharebutton</string>
    <string name="wishimagespecific">wishimage</string>
    <string name="your_wishspecific">Your Wish</string>
    <string name="descspecific">DESC</string>
    <string name="namespecific">Name</string>
    <string name="locationtxtspecific">LOCATIONtXT</string>
    <string name="pricespecific">Price</string>
    <string name="descriptionspecific">Description</string>
    <string name="can_be_found_atspecific">Can be found at</string>
    <string name="pricespecific1">Price</string>
    <string name="krspecific">kr</string>
    <string name="nameupdate1">Name</string>
    <string name="descriptionupdate1">Description</string>
    <string name="buttonupdate">Button</string>
    <string name="locationupdate1">Location</string>
    <string name="priceupdate1">Price</string>
    <string name="descriptionupdate">Description</string>
    <string name="nameupdate">Name</string>
    <string name="priceupdate">Price</string>
    <string name="update_your_wishupdate">Update your wish</string>
    <string name="update_changesupdate">Update Changes</string>
    <string name="locationupdate">Location</string>
    <string name="kronerupdate">Kroner</string>
    <string name="is_this_boughtupdate">Is this Bought?</string>
    <string name="wishdescriptionupdate">WishDescription</string>
    <string name="itemNameList">ITEM</string>
    <string name="wishimageList">WishImage</string>
    <string name="editbtn">TODO</string>
</resources>