<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A7533">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="30dp"
    android:background="@drawable/rectangle"
    android:windowSoftInputMode="adjustPan"

    tools:context=".Fragments.add.AddFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:contentDescription="@string/wishimage"
        android:src="@drawable/mnt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/addItemName_edittext"
                android:layout_width="330dp"
                android:layout_height="35dp"
                android:background="@drawable/custom_input"
                android:ems="10"

                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/where_can_you_get_it"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/addDescription_edittext"
                app:layout_constraintTop_toBottomOf="@+id/addDescription_edittext" />

            <EditText
                android:id="@+id/addLocation_edittext"
                android:layout_width="330dp"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/location"
                android:inputType="textPersonName"
                android:paddingStart="12dp"

                android:paddingEnd="12dp"
                app:layout_constraintStart_toStartOf="@+id/addDescription_edittext"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/wish_name"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/addItemName_edittext"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <EditText
                android:id="@+id/addDescription_edittext"
                android:layout_width="330dp"
                android:layout_height="35dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintStart_toStartOf="@+id/addItemName_edittext"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:autofillHints="" />

            <Button
                android:id="@+id/btn_add_to_list"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/add_to_list"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text="@string/kroner"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/price_of_item"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/addLocation_edittext"
                app:layout_constraintTop_toBottomOf="@+id/addLocation_edittext" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="84dp"
                android:layout_height="35dp"
                android:background="@drawable/custom_input"
                android:ems="12"
                android:hint="@string/price"
                android:inputType="number"

                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintStart_toStartOf="@+id/addLocation_edittext"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"

                android:text="@string/description_of_item"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/addItemName_edittext"
                app:layout_constraintTop_toBottomOf="@+id/addItemName_edittext" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:clickable="true"

        android:contentDescription="@string/deletebtn"
        android:focusable="true"
        android:tint="#f8d54c"
        app:backgroundTint="#a92921"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_image" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fireplace"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/add_a_wish"
                android:textColor="#a92921"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
