<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A7533"

    tools:context=".Fragments.list.ListFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#0A7533"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/share"

            android:textColor="#FF3a3f"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/add"

            android:textColor="#FF3a3f"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imagebtnAdd"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/addbutton"
            android:paddingTop="10dp"
            android:tint="#FF3a3f"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:srcCompat="@drawable/ic_add" />

        <ImageButton
            android:id="@+id/imageBtnShare"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:background="?android:selectableItemBackground"

            android:contentDescription="@string/sharebutton"
            android:paddingTop="10dp"
            android:tint="#FF3a3f"
            app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:srcCompat="@drawable/ic_share" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/listbackground"

        android:endColor="#0A7533"
        android:startColor="#0A7533"


        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView16"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/topbbar"
        android:fontFamily="@font/fireplace"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/wishing_list"
        android:textAlignment="center"

        android:textColor="#FF3a3f"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>